metadatafullcopy/unpackaged/objects/Schedule_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Options__c</fullName>
        <label>Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Cabinetry</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>General Demolition</fullName>
                </value>
                <value>
                    <fullName>Doors</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Finish Trim/Carpentry</fullName>
                </value>
                <value>
                    <fullName>Framing/Rough Carpentry</fullName>
                </value>
                <value>
                    <fullName>Heat, Vent &amp; A/C</fullName>
                </value>
                <value>
                    <fullName>Insulation</fullName>
                </value>
                <value>
                    <fullName>Interior Lath &amp; Plaster</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Roofing</fullName>
                </value>
                <value>
                    <fullName>Stucco</fullName>
                </value>
                <value>
                    <fullName>Wallpaper</fullName>
                </value>
                <value>
                    <fullName>Window</fullName>
                </value>
                <value>
                    <fullName>Acoustical Treatments</fullName>
                </value>
                <value>
                    <fullName>Awnings &amp; Patio Covers</fullName>
                </value>
                <value>
                    <fullName>MAS Concrete/Masonry</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Contents: Packaging, Handling, and Storage</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Electrical Special Systems</fullName>
                </value>
                <value>
                    <fullName>Heavy Equipment</fullName>
                </value>
                <value>
                    <fullName>Excavation</fullName>
                </value>
                <value>
                    <fullName>Floor Covering Carpet</fullName>
                </value>
                <value>
                    <fullName>Floor Covering Resilient</fullName>
                </value>
                <value>
                    <fullName>Floor Covering Stone</fullName>
                </value>
                <value>
                    <fullName>Floor Covering Ceramic Tile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Schedule Line Items</relationshipLabel>
        <relationshipName>Schedule_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Schedule Line Item</label>
    <nameField>
        <displayFormat>SCH-{000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>